# HttpArena

./: README.md
frameworks/aspnet-minimal/: Models.cs  Program.cs  meta.json
frameworks/dogrider/: Program.cs  riderdog.csproj
frameworks/fletch/: meta.json
frameworks/genhttp-11/: Program.cs  Project.cs  README.md  genhttp.csproj  meta.json
frameworks/ktor/: build.gradle.kts
frameworks/pyronova/: Dockerfile  app.py  launcher.py  meta.json
frameworks/rack-falcon/: Dockerfile  Gemfile  app.rb  falcon.rb  meta.json
frameworks/rails/: Dockerfile  Gemfile
frameworks/roadrunner/: Dockerfile  bench-results.md  meta.json  rebar.config
frameworks/roda/: Gemfile  app.rb  config.ru  meta.json
frameworks/sinatra/: app.rb  config.ru  puma.rb
frameworks/swerver/: Dockerfile  build.zig.zon  config-h2c.json  entrypoint.sh  main.zig  meta.json
frameworks/symfony-spawn-tas/: Dockerfile  meta.json
frameworks/tokio-uring/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/trillium/: Cargo.toml  Dockerfile  README.md  compose.gateway-h3.yml  compose.gateway.yml  meta.json
frameworks/trillium-tuned/: Cargo.toml  Dockerfile  meta.json
frameworks/trillium/proxy/: Cargo.toml  Dockerfile
frameworks/trillium/proxy/src/: main.rs
frameworks/trillium/src/: main.rs  state.rs
frameworks/trillium/src/handlers/: crud.rs  db.rs  ws.rs
frameworks/true-async-server/: Dockerfile  README.md  entry.php  meta.json
frameworks/typev/: Dockerfile  README.md  meta.json
frameworks/vanilla/: .gitignore  (+4 more)
requests/: fortunes-get.raw
scripts/: benchmark.sh  validate.sh
(+86 files in other folders)
