[package]
name = "httparena-trillium-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
trillium = "1.1"
trillium-tokio = "0.6"
trillium-router = "0.5"
trillium-rustls = "0.11"
trillium-quinn = "0.1"
trillium-static = { version = "0.5", features = ["tokio"] }
trillium-proxy = "0.7"

log = "0.4"
env_logger = "0.11"
mimalloc = { version = "0.1", default-features = false }
swansong = "0.3.4"
socket2 = { version = "0.5", features = ["all"] }
num_cpus = "1"
signal-hook = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
